# mcp-servers

clients/git-client/: file_agent.py  git_agent.py  pyproject.toml
servers-extra/weather/: README.md  pyproject.toml
servers-extra/weather/src/mcp_server_weather/: __init__.py  cli.py  gaode_weather.py  server.py  sse_server.py
servers-extra/weather/src/mcp_server_weather/models/: weather.py
servers-extra/weather/tests/: manual_test_api.py  test_gaode_weather.py
